table: colors/shapes combinations between CLEVR, CLEVR CoGenT-A and CLEVR CoGenT-B

--- a/2018_nips_vigil/appendix.tex
+++ b/2018_nips_vigil/appendix.tex
@@ -5,6 +5,23 @@
 \begin{enumerate}
 \item Some description (with link to the paper) about the datasets. Maybe we can "import" material from main paper, making it lighter...
 \item Table with attributes/feature combinations of CLEVR/CoGenT-A/CoGenT-B
+
+\begin{table}
+	\centering
+	\begin{tabular}{ccccCcCc}
+		\toprule
+		Dataset        & Cubes              & Cylinders &  Spheres         \\
+		\midrule
+		CLEVR   &  any color &  any color        &    any color    \\
+		%\midrule
+		CLEVR CoGenT A & gray / blue / brown / yellow  & red / green / purple / cyan       &    any color  \\
+		CLEVR CoGenT B  & red / green / purple / cyan &   gray / blue / brown / yellow       &      any color  \\
+		\bottomrule
+	\end{tabular}
+	\caption{Comparison of the different colors/shapes combinations between CLEVR, CLEVR CoGenT-A and CLEVR CoGenT-B  }
+	\label{tab:parameters}
+\end{table}
+
 \item Some exemplary pictures?
 \end{enumerate}
 
