--- a/2018_nips_vigil/experiments.tex
+++ b/2018_nips_vigil/experiments.tex
@@ -23,13 +23,13 @@ We implemented both versions of the MAC model using PyTorch v0.4.0~\cite{paszke2
 		  &                        &   &              &     &                               & CoGenT-B   & 96.27  \\
 
 		\cmidrule{5-6} \cmidrule{7-8} 
-		&                             &                                         &    &   \multirow{2}{*}{CoGenT-A}         &       \multirow{2}{*}{98.06}          & CoGenT-A &  x         \\
+		&                             &                                         &    &   \multirow{2}{*}{CoGenT-A}         &       \multirow{2}{*}{98.06}          & CoGenT-A &  94.60	         \\
 		\cmidrule{7-8} 
-		&                             &                                         &       &         &                & CoGenT-B &    x       \\
+		&                             &                                         &       &         &                & CoGenT-B &    93.28       \\
 		\cmidrule{5-6} \cmidrule{7-8} 
-		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{98.16}          & CoGenT-A &  x         \\
+		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{98.16}          & CoGenT-A &  93.02         \\
 		\cmidrule{7-8} 
-		&                             &                                         &       &         &                & CoGenT-B &    x       \\  
+		&                             &                                         &       &         &                & CoGenT-B &    94.44       \\  
 		  
 		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8} 
 		& \multirow{5}{*}{CoGenT-A} & \multirow{5}{*}{30:52}     & \multirow{5}{*}{97.02}   &  \multirow{2}{*}{--}  &  \multirow{2}{*}{--}    & CoGenT-A & 96.88         \\
