appendix on VQA

--- a/2018_nips_vigil/vigil_bibliography.bib
+++ b/2018_nips_vigil/vigil_bibliography.bib
@@ -136,6 +136,14 @@
 	year={2017}
 }
 
+@inproceedings{Santoro2017ASN,
+	title={A simple neural network module for relational reasoning},
+	author={Adam Santoro and David Raposo and David G. T. Barrett and Mateusz Malinowski and Razvan Pascanu and Peter W. Battaglia and Timothy P. Lillicrap},
+	booktitle={NIPS},
+	year={2017}
+}
+}
+
 @Article{torrey2009transfer,
   Title                    = {Transfer learning},
   Author                   = {Torrey, Lisa and Shavlik, Jude},
