--- a/2018_nips_vigil/appendix.tex
+++ b/2018_nips_vigil/appendix.tex
@@ -2,9 +2,32 @@
 
 \section{Description of datasets}
 
-\begin{enumerate}
-\item Some description (with link to the paper) about the datasets. Maybe we can "import" material from main paper, making it lighter...
-\item Table with attributes/feature combinations of CLEVR/CoGenT-A/CoGenT-B
+Most of the VQA datasets contain ambiguities and have strong linguistic biases that allow a model to learn answering strategies that exploit those biases, without reasoning about the visual input ~\cite{Santoro2017ASN}
+The CLEVR dataset ~\cite{johnson2017clevr}  was developed to address those issues and come back to the core challenge of visual QA which is reasoning  \href{url}{https://arxiv.org/pdf/1612.06890.pdf}.\\
+CLEVR contains images of 3D-rendered objects, such as spheres and cylinders. Each image is associated with a number of questions that fall into different categories. For example, query attribute questions may ask “What is the color of the sphere?”, while compare attribute questions may ask “Is the cube the same material as the cylinder? ”.
+The dataset consist of:
+\begin{itemize}
+\item 	A training set of 70k images and 700k questions
+\item	A test  set of 15k images and 150k questions about objects
+\item	A validation set of 15k images and 150k 
+\item	Answers, scene graphs and functional programs for all train and val images and questions
+
+\end{itemize}
+
+The dataset features unbiased, highly compositional questions that require an array of challenging reasoning skills, such as transitive and logical relations, counting and comparisons, without allowing any shortcuts around such reasoning ~\cite{hudson2018compositional}.
+
+To test how well models learn compositional concepts that generalize, CLEVR-CoGenT was introduced . This dataset is synthesized in the same way as CLEVR but contains two conditions. As shown in Table 3 in Condition A, all cubes are gray, blue, brown, or yellow and all cylinders are red, green, purple, or cyan; in Condition B, cubes and cylinders swap color palettes.
+Both conditions contain spheres of all colors. CLEVR-CoGenT thus indicates how a model answers CLEVR questions: by memorizing combinations of traits or by learning disentangled or general representations ~\cite{perez2017film}
+
+This dataset consists of:
+\begin{itemize}
+\item	A training set of 70,000 images and 699,960 questions in Condition A
+\item	A validation set of 15,000 images and 150,000 questions in Condition A
+\item	A validation set of 15,000 images and 149,991 questions in Condition B
+\item	A test set of 15,000 images and 149,980 questions in Condition B
+\item	A test set of 15,000 images and 149,992 questions in Condition B
+\item	Answers, scene graphs and functional programs for all train and val images and questions
+\end{itemize}
 
 \begin{table}
 	\centering
@@ -21,9 +44,6 @@
 	\caption{Comparison of the different colors/shapes combinations between CLEVR, CLEVR CoGenT-A and CLEVR CoGenT-B  }
 	\label{tab:parameters}
 \end{table}
-
-\item Some exemplary pictures?
-\end{enumerate}
 
 \section{Full MAC and S-MAC comparison}
 
