--- a/2018_nips_vigil/experiments.tex
+++ b/2018_nips_vigil/experiments.tex
@@ -47,11 +47,11 @@ We implemented both versions of the MAC model using PyTorch v0.4.0~\cite{paszke2
 		&                        &   &              &     &                               & CoGenT-B   &  95.58  \\		
 		
 		\cmidrule{5-6} \cmidrule{7-8} 
-		&                             &                                         &    &   \multirow{2}{*}{CoGenT-A}         &       \multirow{2}{*}{x}          & CoGenT-A &  x         \\
+		&                             &                                         &    &   \multirow{2}{*}{CoGenT-A}         &       \multirow{2}{*}{97.48}          & CoGenT-A &  x         \\
 		\cmidrule{7-8} 
 		&                             &                                         &       &         &                & CoGenT-B &    x       \\
 		\cmidrule{5-6} \cmidrule{7-8} 
-		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{x}          & CoGenT-A &  x         \\
+		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{97.67}          & CoGenT-A &  x         \\
 		\cmidrule{7-8} 
 		&                             &                                         &       &         &                & CoGenT-B &    x       \\  		
 		
