--- a/2018_nips_vigil/vigil_bibliography.bib
+++ b/2018_nips_vigil/vigil_bibliography.bib
@@ -64,11 +64,14 @@
 }
 
 @article{hudson2018compositional,
-	title={Compositional attention networks for machine reasoning},
-	author={Hudson, Drew A and Manning, Christopher D},
-	journal={arXiv preprint arXiv:1803.03067},
-	year={2018}
+  author    = {Drew A. Hudson and Christopher D. Manning},
+  title     = {Compositional attention networks for machine reasoning},
+  journal   = {International Conference on Learning Representations},
+  year      = {2018},
+  eprint       = {1803.03067},
+  eprinttype   = {arxiv},
 }
+
 
 @inproceedings{johnson2017clevr,
 	title={CLEVR: A diagnostic dataset for compositional language and elementary visual reasoning},
