--- a/2018_nips_vigil/experiments.tex
+++ b/2018_nips_vigil/experiments.tex
@@ -47,13 +47,13 @@ We implemented both versions of the MAC model using PyTorch v0.4.0~\cite{paszke2
 		&                        &   &              &     &                               & CoGenT-B   &  95.58  \\		
 		
 		\cmidrule{5-6} \cmidrule{7-8} 
-		&                             &                                         &    &   \multirow{2}{*}{CoGenT-A}         &       \multirow{2}{*}{97.48}          & CoGenT-A &  x         \\
+		&                             &                                         &    &   \multirow{2}{*}{CoGenT-A}         &       \multirow{2}{*}{97.48}          & CoGenT-A &  93.44         \\
 		\cmidrule{7-8} 
-		&                             &                                         &       &         &                & CoGenT-B &    x       \\
+		&                             &                                         &       &         &                & CoGenT-B &    92.31       \\
 		\cmidrule{5-6} \cmidrule{7-8} 
-		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{97.67}          & CoGenT-A &  x         \\
+		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{97.67}          & CoGenT-A &  92.11         \\
 		\cmidrule{7-8} 
-		&                             &                                         &       &         &                & CoGenT-B &    x       \\  		
+		&                             &                                         &       &         &                & CoGenT-B &    92.95       \\  		
 		
 		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8} 
 		& \multirow{5}{*}{CoGenT-A}   & \multirow{5}{*}{28:33}   & \multirow{5}{*}{96.09}  &  \multirow{2}{*}{--}  &  \multirow{2}{*}{--}   & CoGenT-A & 95.91          \\
