--- a/2018_nips_vigil/conclusion.tex
+++ b/2018_nips_vigil/conclusion.tex
@@ -1,10 +1,11 @@
 \section{Conclusion}
-We have introduced SMAC, a simplified version on the MAC model. This version has simplified equations and therefore we could reduce significantly the number of parameters in the MAC cell, which is the recurrent unit of the model. As a result we could decrease training time by more than two hours while maintaining an equivalent test accuracy. 
+We have introduced SMAC, a simplified version on the MAC model. This version proposes simplified equations and therefore we could reduce significantly the number of parameters in the MAC cell, which is the recurrent unit of the model. As a result we could decrease training time by more than two hours ( reduction by almost 10 \%)
+while maintaining an equivalent test accuracy. 
 We have also put to test the MAC and SMAC models on a novel task, the CLEVR CoGenT dataset.
 It is a structured dataset especially designed to study transfer learning and generalization abilities. The results of our experiments first show that MAC and SMAC perform equally well on all the CoGenT task. Thus the simplifications did not alter SMAC generalization capability.
 Furthermore, MAC and SMAC compare favorably with state-of-the-art models on the CoGenT taks. MAC and SMAC present competitive generalization and transfer learning capacities.
 Nevertheless, CLEVR CoGenT remains an unsolved problem. The MAC model still struggles to learn distinct concepts. We could see that MAC sometimes fail to differentiate colors and shape as two distinct features of the same object. 
 
-+ Ppening on future work
++ Opening on future work/ideas
 + Tomasz’s comment on finetuning
 
