--- a/2018_nips_vigil/appendix.tex
+++ b/2018_nips_vigil/appendix.tex
@@ -24,7 +24,7 @@ This dataset consists of:
 \item	A training set of 70,000 images and 699,960 questions in Condition A
 \item	A validation set of 15,000 images and 150,000 questions in Condition A
 \item	A validation set of 15,000 images and 149,991 questions in Condition B
-\item	A test set of 15,000 images and 149,980 questions in Condition B
+\item	A test set of 15,000 images and 149,980 questions in Condition A
 \item	A test set of 15,000 images and 149,992 questions in Condition B
 \item	Answers, scene graphs and functional programs for all train and val images and questions
 \end{itemize}
