minor clean up 2

--- a/2018_nips_vigil/appendix.tex
+++ b/2018_nips_vigil/appendix.tex
@@ -8,8 +8,8 @@ CLEVR contains images of 3D-rendered objects, such as spheres and cylinders. Eac
 The dataset consist of:
 \begin{itemize}
 \item 	A training set of 70k images and 700k questions
-\item	A test  set of 15k images and 150k questions about objects
-\item	A validation set of 15k images and 150k 
+\item	A test  set of 15k images and 150k questions 
+\item	A validation set of 15k images and 150k  questions
 \item	Answers, scene graphs and functional programs for all train and val images and questions
 
 \end{itemize}
