--- a/2018_nips_vigil/appendix.tex
+++ b/2018_nips_vigil/appendix.tex
@@ -2,8 +2,8 @@
 
 \section{Description of datasets}
 
-Most of the VQA datasets contain ambiguities and have strong linguistic biases that allow a model to learn answering strategies that exploit those biases, without reasoning about the visual input ~\cite{Santoro2017ASN}
-The CLEVR dataset ~\cite{johnson2017clevr}  was developed to address those issues and come back to the core challenge of visual QA which is reasoning  \href{url}{https://arxiv.org/pdf/1612.06890.pdf}.\\
+Most of the VQA datasets contain ambiguities and have strong linguistic biases that allow a model to learn answering strategies that exploit those biases, without reasoning about the visual input ~\cite{Santoro2017ASN}.
+The CLEVR dataset ~\cite{johnson2017clevr}  \href{url}{https://arxiv.org/pdf/1612.06890.pdf}  was developed to address those issues and come back to the core challenge of visual QA which is reasoning  .\\
 CLEVR contains images of 3D-rendered objects, such as spheres and cylinders. Each image is associated with a number of questions that fall into different categories. For example, query attribute questions may ask “What is the color of the sphere?”, while compare attribute questions may ask “Is the cube the same material as the cylinder? ”.
 The dataset consist of:
 \begin{itemize}
