abstract small modification

--- a/2018_nips_vigil/main.tex
+++ b/2018_nips_vigil/main.tex
@@ -94,7 +94,7 @@
 \maketitle
 
 \begin{abstract}
-We propose a simplified version of the MAC model (Hudson and Manning, CVPR 2018) with a new set of equations to improve training performances. We also test the performance of the MAC model on a novel task, the CLEVR CoGenT dataset. This task is designed to test  generalization and transfer learning abilities. We show how MAC performs on CLEVR CoGenT and compare it to other baselines. Finally we examine the model failures, and show that MAC sometimes struggles to differentiate real concepts like objects attributes. 
+We propose a simplified version of the MAC model (Hudson and Manning, CVPR 2018) with a new set of equations to improve training performances. We also test the performance of the MAC model on a novel task, the CLEVR CoGenT dataset. This task is designed to test  generalization and transfer learning abilities. We show how MAC and our simplified versions of MAC perform on CLEVR CoGenT and compare them to other baselines. Finally we examine the model failures, and show that MAC sometimes struggles to differentiate real concepts like objects attributes. 
 \end{abstract}
 \input{introduction}
 \input{mac}
