clean up - intro + mac

--- a/2018_nips_vigil/introduction.tex
+++ b/2018_nips_vigil/introduction.tex
@@ -1,7 +1,7 @@
 \section{Introduction}
 Reasoning over visual inputs is a fundamental characteristic of human intelligence.
 Reproducing this ability with artificial systems is a challenge that requires learning relations and compositionality~\citep{hu2017learning, johnson2017inferring}. The Visual Question Answering (VQA)~\citep{antol2015vqa,malinowski2014towards,wu2017visual} task has been tailored to benchmark those reasoning performances. VQA is a complex semantic task that combines natural language processing and visual recognition.
-In order to answer the questions the system  requires to master several perceptual abilities, such as recognizing objects, attributes, and spatial relations as well as leveraging commonsense world knowledge~\citep{hudson2018compositional}.
+In order to answer the questions, the system requires to master several perceptual abilities, such as recognizing objects, attributes, and spatial relations as well as leveraging commonsense world knowledge~\citep{hudson2018compositional}.
 
 To solve this type of reasoning task, many approaches have been explored although they often appear to struggle performing well on tasks with a structured and compositional nature \citep{hudson2018compositional}.
 More recent approaches adopt modular structures, resembling the trees of programming languages, that compose neural modules from a fixed predefined collection \cite{andreas2016learning,johnson2017inferring, mascharka2018transparency}. However, they rely on externally provided structured representations and functional programs, parsers or expert demonstration, and sometimes require reinforcement learning training schemes.
