--- a/2018_nips_vigil/vigil_bibliography.bib
+++ b/2018_nips_vigil/vigil_bibliography.bib
@@ -156,6 +156,17 @@
   Volume                   = {1}
 }
 
+@Article{williams1992simple,
+  author    = {Williams, Ronald J},
+  title     = {Simple statistical gradient-following algorithms for connectionist reinforcement learning},
+  journal   = {Machine learning},
+  year      = {1992},
+  volume    = {8},
+  number    = {3-4},
+  pages     = {229--256},
+  publisher = {Springer},
+}
+
 @article{wu2017visual,
 	title={Visual question answering: A survey of methods and datasets},
 	author={Wu, Qi and Teney, Damien and Wang, Peng and Shen, Chunhua and Dick, Anthony and van den Hengel, Anton},
