--- a/2018_nips_vigil/vigil_bibliography.bib
+++ b/2018_nips_vigil/vigil_bibliography.bib
@@ -165,7 +165,20 @@
 	year={2017},
 	publisher={Elsevier}
 }
+@article{bahdanau2014neural,
+	title={Neural machine translation by jointly learning to align and translate},
+	author={Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
+	journal={arXiv preprint arXiv:1409.0473},
+	year={2014}
+}
 
+@inproceedings{xu2015show,
+	title={Show, attend and tell: Neural image caption generation with visual attention},
+	author={Xu, Kelvin and Ba, Jimmy and Kiros, Ryan and Cho, Kyunghyun and Courville, Aaron and Salakhudinov, Ruslan and Zemel, Rich and Bengio, Yoshua},
+	booktitle={International conference on machine learning},
+	pages={2048--2057},
+	year={2015}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: saveOrderConfig:specified;bibtexkey;false;abstract;false;abstract;false;}
