--- a/2018_nips_vigil/smac.tex
+++ b/2018_nips_vigil/smac.tex
@@ -19,7 +19,7 @@ below, without incurring too much drop in accuracy.
 
 In the description below, the original MAC cell equations are shown on the \emph{left}
 while our simplified equations are shown (in color) on the {\color{Plum} \emph{right}}.
-(The equation numbering is the same as in~\cite{hudson2018compositional}.)
+The equation numbering is the same as in~\cite{hudson2018compositional}.
 
 \noindent\textit{Notation.}
 Let $q$ denote the global context of the question
