--- a/2018_nips_vigil/experiments.tex
+++ b/2018_nips_vigil/experiments.tex
@@ -16,40 +16,14 @@ We implemented both versions of the MAC model using PyTorch v0.4.0~\cite{paszke2
 		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8} 
 		& Dataset                & Time [h:m] & Acc [\%]          & Dataset & Acc [\%]  & Dataset & Acc [\%] \\
 		\midrule
-		\multirow{15}{*}{MAC} & \multirow{10}{*}{CLEVR}  & \multirow{10}{*}{30:52}  & \multirow{10}{*}{96.70} & \multirow{4}{*}{--}   & \multirow{4}{*}{--}  & CLEVR    & 96.17          \\
-		\cmidrule{7-8} 
-		 &                        &  &               &     &                                & CoGenT-A    &  96.22   \\
-		\cmidrule{7-8} 
-		  &                        &   &              &     &                               & CoGenT-B   & 96.27  \\
-
-		\cmidrule{5-6} \cmidrule{7-8} 
-		&                             &                                         &    &   \multirow{2}{*}{CoGenT-A}         &       \multirow{2}{*}{98.06}          & CoGenT-A &  94.60	         \\
-		\cmidrule{7-8} 
-		&                             &                                         &       &         &                & CoGenT-B &    93.28       \\
-		\cmidrule{5-6} \cmidrule{7-8} 
-		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{98.16}          & CoGenT-A &  93.02         \\
-		\cmidrule{7-8} 
-		&                             &                                         &       &         &                & CoGenT-B &    94.44       \\  
-		  
-		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8} 
-		& \multirow{5}{*}{CoGenT-A} & \multirow{5}{*}{30:52}     & \multirow{5}{*}{97.02}   &  \multirow{2}{*}{--}  &  \multirow{2}{*}{--}    & CoGenT-A & 96.88         \\
-		\cmidrule{7-8} 
-		&                             &                                         &       &         &                & CoGenT-B & 79.54          \\
-		\cmidrule{5-6} \cmidrule{7-8} 
-		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{97.91}          & CoGenT-A &  92.06         \\
-		\cmidrule{7-8} 
-		&                             &                                         &       &         &                & CoGenT-B &    95.62       \\
+		MAC & \CLEVR  & 30:52  & 96.70 & --   & --  & CLEVR    & 96.17          \\
 		\midrule
-		\multirow{15}{*}{S-MAC} & \multirow{10}{*}{CLEVR}  & \multirow{10}{*}{28:30}  & \multirow{10}{*}{95.82} & \multirow{3}{*}{--}   & \multirow{3}{*}{--}  & CLEVR    & 95.29           \\
+		\multirow{13}{*}{S-MAC} & \multirow{7}{*}{CLEVR}  & \multirow{7}{*}{28:30}  & \multirow{7}{*}{95.82} & \multirow{4}{*}{--}   & \multirow{4}{*}{--}  & CLEVR    & 95.29           \\
 		\cmidrule{7-8} 
 		&                        &  &               &     &                                & CoGenT-A    &  95.47   \\
 		\cmidrule{7-8} 
 		&                        &   &              &     &                               & CoGenT-B   &  95.58  \\		
 		
-		\cmidrule{5-6} \cmidrule{7-8} 
-		&                             &                                         &    &   \multirow{2}{*}{CoGenT-A}         &       \multirow{2}{*}{97.48}          & CoGenT-A &  93.44         \\
-		\cmidrule{7-8} 
-		&                             &                                         &       &         &                & CoGenT-B &    92.31       \\
 		\cmidrule{5-6} \cmidrule{7-8} 
 		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{97.67}          & CoGenT-A &  92.11         \\
 		\cmidrule{7-8} 
