--- a/2018_nips_vigil/vigil_bibliography.bib
+++ b/2018_nips_vigil/vigil_bibliography.bib
@@ -14,6 +14,12 @@
 	pages={2425--2433},
 	year={2015}
 }
+@article{bahdanau2014neural,
+	title={Neural machine translation by jointly learning to align and translate},
+	author={Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
+	journal={arXiv preprint arXiv:1409.0473},
+	year={2014}
+}
 
 @InProceedings{caruana1993multitask,
   Title                    = {Multitask learning: A knowledge-based source of inductive bias},
@@ -53,6 +59,17 @@
   doi       = {10.1109/CVPR.2016.90},
   timestamp = {Thu, 25 May 2017 00:41:26 +0200},
   url       = {https://doi.org/10.1109/CVPR.2016.90},
+}
+
+@Article{hochreiter1997long,
+  author    = {Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  title     = {Long short-term memory},
+  journal   = {Neural computation},
+  year      = {1997},
+  volume    = {9},
+  number    = {8},
+  pages     = {1735--1780},
+  publisher = {MIT Press},
 }
 
 @article{hu2017learning,
@@ -176,12 +193,6 @@
 	year={2017},
 	publisher={Elsevier}
 }
-@article{bahdanau2014neural,
-	title={Neural machine translation by jointly learning to align and translate},
-	author={Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
-	journal={arXiv preprint arXiv:1409.0473},
-	year={2014}
-}
 
 @inproceedings{xu2015show,
 	title={Show, attend and tell: Neural image caption generation with visual attention},
@@ -190,6 +201,7 @@
 	pages={2048--2057},
 	year={2015}
 }
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: saveOrderConfig:specified;bibtexkey;false;abstract;false;abstract;false;}
