--- a/2018_nips_vigil/introduction.tex
+++ b/2018_nips_vigil/introduction.tex
@@ -7,7 +7,7 @@ Reproducing this ability with artificial systems is a challenge that requires le
 
 Many approaches have been explored, 
 %although they often appear to struggle on tasks with a structured and compositional nature \citep{hudson2018compositional}.
-such as modular structures, resembling the trees of programming languages, that compose neural modules from a fixed predefined collection \cite{andreas2016learning,johnson2017inferring, mascharka2018transparency}. Attention mechanisms (\cite{bahdanau2014neural}, \cite{xu2015show}) are also frequently used to guide the focus of the system over the image and the question words.
+such as modular networks, that combine modules coming from a predefined collection \cite{andreas2016learning,johnson2017inferring, mascharka2018transparency}. Attention mechanisms (\cite{bahdanau2014neural}, \cite{xu2015show}) are also frequently used to guide the focus of the system over the image and the question words.
 %Other approaches such as \vm{Ask Tomasz what he is thinking about.}.
 
 %However, they rely on externally provided structured representations and functional programs, parsers or expert demonstration, and sometimes require reinforcement learning training schemes.
